# tinker-tailor

./: .flake8  .gitignore  HOWTO.md  README.md  config.py.example  pyproject.toml
apps/modal/: playground.py  proxy.py  run_pipeline.py  vllm_lora.py
data/: sft_conversations.jsonl
docs/: PROJECT_STRUCTURE.md
scripts/: download_adapter.py  prepare_sft_codealpaca.py  prepare_sft_no_robots.py  run_pipeline.py  run_rl.py  run_sft.py  run_tinker_sft_rl.py  setup_modal_secrets.sh
src/llm_tuner/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  telemetry.py  user_config.py  utils.py
src/llm_tuner/artifacts/: __init__.py  adapter.py
src/llm_tuner/evals/: __init__.py  mbpp.py
src/llm_tuner/serve/: modal_playground.py  modal_tinker_proxy.py  modal_vllm_lora.py
src/llm_tuner/training/: __init__.py  rl.py  sft.py
tests/: conftest.py  test_cli.py  test_config.py
